# transformsai-ai-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  central_logger.py  datasend.py  main.py  pyproject.toml  stream_publisher.py  stream_receiver.py  video_capture.py
docs/: on-demand-vps-setup.md
mediamtx-host/: README.md  demand-nginx.conf  docker-compose.yml  mediamtx.yml
src/transformsai_ai_core/: __init__.py  api_client.py  central_logger.py  config_loader.py  config_schema.py  cpu_affinity.py  datasend.py  main.py  mediamtx_streamer.py  utils.py  video_capture.py  yolo_wrapper.py
tests/: __init__.py  demo_logger.py  test-config-1.yaml  test-config-2.yaml  test_api_client.py  test_capture_restart.py  test_capture_timestamp.py  test_cli_debug.py  test_config_manager.py  test_cpu_affinity.py  test_datasend.py  test_fps_crash.py  test_from_config.py  test_logger.py  test_mediamtx_on_demand.py  test_yolo_wrapper.py
