# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformsai-ai-core"
version = "3.0.4"
description = "TransformsAI Core Library - Utilities for AI vision applications"
readme = "README.md"
authors = [
    {name = "TransformsAI", email = "contact@transformsai.com"}
]
license = { file = "LICENSE" }
# Set a more compatible Python version. Only increase this if you use newer features.
requires-python = "==3.11.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies 
# NOTE: Most of them doesn't have version constraints to allow end projects to manage their own versions. Only add version constraints if there are known compatibility issues.
dependencies = [
    "opencv-python",
    "numpy",
    "requests",
    "psutil",
    "PyYAML",
    "fsspec",
    "tqdm",
    "python-dateutil",
    "pytz",
    "loguru",
    "pydantic",
    "gdown",
    "ultralytics",
    "clip",
]

[project.optional-dependencies]
# TensorRT option
trt = [
    "onnx",
    "onnxruntime-gpu",
    "onnxslim",
    "tensorrt-cu12>=10.13.3.9",
    "torch", 
    "torchvision", 
]

# RKNN option
rknn = [
    "rknn-toolkit-lite2>=2.3.2; sys_platform != 'darwin'",
    "numpy<2",
    "torch<=2.2.1",
    "torchvision", 
]

# ONNX option
onnx = [
    "onnx",
    "onnxruntime-gpu",
    "onnxslim",
    "torch", 
    "torchvision", 
]

# --- Setuptools Configuration (Replaces setup.cfg and MANIFEST.in) ---
[tool.setuptools.packages.find]
# This tells setuptools to look for packages inside the 'src' directory
where = ["src"]

[tool.setuptools]
include-package-data = true

# UV environment configuration
[tool.uv]
conflicts = [
    [
        { extra = "rknn" },
        { extra = "trt" },
        { extra = "onnx" },
    ],
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git", rev = "643beff3883b5720d94b6b9c9eca12fa9fb72fb1" }

[project.scripts]
transformsaicore = "transformsai_ai_core.main:main"
